--- a/c-census.html
+++ b/c-census.html
@@ -125,6 +125,8 @@
         </div>
     </main>
     <b style="color: #519872; margin: auto 40%;">&copy;benjamin-a-ngafua</b>
+    <script type="text/javascript" src="./c-census.js"></script>
+    <script type="text/javascript" src="./c-census.json"></script>
 </body>
 
 </html>
