--- a/c-census.html
+++ b/c-census.html
@@ -9,6 +9,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital@0;1&display=swap" rel="stylesheet">
     <link href="./c-census.css" rel="stylesheet">
+    <link rel="icon" href="./census.jpg">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.3.0/chart.min.js"></script>
 </head>
 
