--- a/c-census.html
+++ b/c-census.html
@@ -9,7 +9,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital@0;1&display=swap" rel="stylesheet">
     <link href="./c-census.css" rel="stylesheet">
-    <link rel="icon" href="./census.jpg">
+    <link rel="icon" href="./img/census.jpg">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.3.0/chart.min.js"></script>
 </head>
 
@@ -25,21 +25,21 @@
         <!-- First layout for suming-->
         <div id="summing-population">
             <div id="totalPopulation">
-                <div class="population-icon"><img src="./people.png" class="icon" alt="people"></div>
+                <div class="population-icon"><img src="./img/people.png" class="icon" alt="people"></div>
                 <div>
                     <div> <small class="population-text">Total Population</small></div>
                     <div id="POPULATION">3,000,000</div>
                 </div>
             </div>
             <div id="female">
-                <div class="female-icon"><img src="./female.png" class="icon" alt="female"></div>
+                <div class="female-icon"><img src="./img/female.png" class="icon" alt="female"></div>
                 <div>
                     <div> <small style="color: #828282;">FEMALE</small></div>
                     <div id="femaleData">1,500,000</div>
                 </div>
             </div>
             <div id="male">
-                <div class="male-icon"><img src="./male.png" class="icon" alt="male"></div>
+                <div class="male-icon"><img src="./img/male.png" class="icon" alt="male"></div>
                 <div>
                     <div> <small style="color: #828282;">MALE</small></div>
                     <div id="maleData">1,500,000</div>
@@ -127,7 +127,7 @@
     </main>
     <b style="color: #519872; margin: auto 40%;">&copy;benjamin-a-ngafua</b>
     <script type="text/javascript" src="./c-census.js"></script>
-    <script type="text/javascript" src="./c-census.json"></script>
+    <!-- <script type="text/javascript" src="./c-census.json"></script> -->
 </body>
 
 </html>
