Loading fetch in OOP

--- a/census.html
+++ b/census.html
@@ -8,7 +8,7 @@
     <title> constructor for census </title>
 
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital@0;1&display=swap" rel="stylesheet">
-    <link href="./c-census.css" rel="stylesheet">
+    <link href="./census.css" rel="stylesheet">
     <link rel="icon" href="./img/census.jpg">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.3.0/chart.min.js"></script>
 </head>
@@ -83,7 +83,7 @@
             <div id="arrowTxt">
                 <div id="arrow">
                     <a href="./census-2008.json" title="download census 2008" download="census-2008.json">
-                        <img src=" ./download.png" width="29" height="30">
+                        <img src="./img/download.png" width="29" height="30">
                     </a>
                 </div>
                 <div id="downloadText"><a href="" style="color:#519872;">
@@ -126,7 +126,7 @@
         </div>
     </main>
     <b style="color: #519872; margin: auto 40%;">&copy;benjamin-a-ngafua</b>
-    <script type="text/javascript" src="./c-census.js"></script>
+    <script type="text/javascript" src="./census.js"></script>
     <!-- <script type="text/javascript" src="./c-census.json"></script> -->
 </body>
 
