Partially Implemented District

--- a/census.html
+++ b/census.html
@@ -65,10 +65,10 @@
 
             <div id="distribute-district">
                 <div> Population by District </div>
-                <!-- Select district -->
+                <!-- Select district onchange="DisplayDistrictsPopulation()" -->
                 <div id="district-label">
-                    <select onchange="" id="county-districts-selection"> 
-                        <option value="select"disabled>Select</option>
+                    <select id="county-districts-selection"> 
+                        <option value="select"disabled>Select</option> 
                     </select>
                 </div>
             </div>
